[package]
name = "fellowfolio-backend"
version = "0.1.0"
authors = ["garrettluu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
